created tutor package and refactored tutorservice and controller